CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(interface)
SET(QT_USE_QTXML TRUE)

FIND_PACKAGE ( Qt4 REQUIRED )
INCLUDE( ${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(
        ${QT_INCLUDE_DIR}
        ${QT_QTCORE_INCLUDE_DIR}
        ${QT_QTXML_INCLUDE_DIR}        
        )


FILE(GLOB SOURCE_FILES *.cpp)
FILE(GLOB QT_HEADERS *.h)
QT4_WRAP_CPP(QT_HEADERS_MOC ${QT_HEADERS})
FILE(GLOB SOURCE_FILES *.cpp)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCE_FILES} ${QT_HEADERS_MOC})
